Fix some align problems

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -142,11 +142,11 @@ main section {
 /* pricing */
 
 .plans-container {
-    width: 90%;
+    width: 100%;
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .plan {
